--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@
   --warning: #ffc107;
   --danger: #dc3545;
   --light: #ffffff;
+  --dirty: #baafaf;
   --dark: #343a40;
   --breakpoint-xs: 0;
   --breakpoint-sm: 576px;
@@ -3489,7 +3490,7 @@ input[type="button"].btn-block {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #495057;
+  color: #63aaf1;
   text-align: center;
   white-space: nowrap;
   background-color: #e9ecef;
@@ -9611,7 +9612,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .text-white-50 {
-  color: rgba(255, 255, 255, 0.5) !important;
+  color:  var(--dirty)!important;
 }
 
 .text-hide {
