--- a/css/style.css
+++ b/css/style.css
@@ -6365,7 +6365,8 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #003459 !important;
+ /* background-color: #003459 !important;*/
+  background-image: linear-gradient(120deg, #003459  0%, #96e6a1 100%) !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
