--- a/css/style.css
+++ b/css/style.css
@@ -10017,7 +10017,7 @@ background: linear-gradient(90deg, rgba(196,200,18,1) 0%, rgba(255,189,0,1) 37%,
 	top: 0;
 }
 	.wrapper {
-		max-width: 600px; 
+		max-width: 1280x; 
 		width: 70%; 
 		position: fixed;
 		transform: translate(-50%, -50%);
@@ -10029,6 +10029,11 @@ background: linear-gradient(90deg, rgba(196,200,18,1) 0%, rgba(255,189,0,1) 37%,
 		box-shadow: 2px 2px 10px 0px rgba(#000000, 0.4);
 	}
 
+
+  .gdriveVideo {
+    width:1280; 
+    height:720; 
+  }
 
 
 
