--- a/css/style.css
+++ b/css/style.css
@@ -10036,7 +10036,17 @@ background: linear-gradient(90deg, rgba(196,200,18,1) 0%, rgba(255,189,0,1) 37%,
   }
 
 
-
+    /* Within Container */
+    .zoom-within-container {
+      height: 300px; /* [1.1] Set it as per your need */
+      overflow: hidden; /* [1.2] Hide the overflowing of child elements */
+    }
+    .zoom-within-container img {
+      transition: transform .5s ease;
+    }
+    .zoom-within-container:hover img {
+      transform: scale(1.5);
+    }
 
 
 
