--- a/css/style.css
+++ b/css/style.css
@@ -10023,8 +10023,8 @@ background: linear-gradient(90deg, rgba(196,200,18,1) 0%, rgba(255,189,0,1) 37%,
 		width: 70%; 
 		position: sticky;
 		
-  		left: 50%;
-	   top: 10%;
+  		/*left: 50%;*/
+	   top: 50%;
 		background: #089e86 ;
 		padding: 30px;
 		border-radius: 10px;
