--- a/css/style.css
+++ b/css/style.css
@@ -6788,8 +6788,9 @@ button.bg-dark:focus {
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: auto;
   border: 0;
+  aspect-ratio: 16 / 9; /* Keeps aspect ratio */
 }
 
 .embed-responsive-21by9::before {
